Requests(family-fun-event): Fix bug covering buttons. #50605

--- a/src/components/custom/custom-app-event/custom-app-event.sass
+++ b/src/components/custom/custom-app-event/custom-app-event.sass
@@ -9,7 +9,8 @@
     max-height: 700px
 
   &--family-fun-event
-    height: calc(104vh - 6rem)
+    display: flex
+    height: 100%
 
   @media screen and (max-width: 1023px)
     background-position: 20%
@@ -42,10 +43,7 @@
       width: 100%
 
     &--family-fun-event
-      display: flex
-      flex-wrap: wrap
-      align-content: center
-      align-items: center
+      display: block
       width: 100%
       height: 100%
 
